--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,8 +1,7 @@
 .main{
+    width: 100%;
     display: flex;
-    justify-content: center;
-    padding: 50px 0;
-    align-items: center;
+    padding: 20px;
+    height: 100vh;
     background-color: #f3f2ef;
-
 }
