--- a/src/components/SidebarUser.css
+++ b/src/components/SidebarUser.css
@@ -22,6 +22,19 @@
 
 }
 
+.sidebar-top-avatar{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.sidebar__top-avatar-photo{
+    transform: translateY(-20%);
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+}
+
 
 .sidebar__top-avatar-name{
     margin-top: 10px;
