--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,6 +9,11 @@
     z-index: 999;
     background: white;
 }
+.container{
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
+}
 
 .header__left{
     display: flex;
