--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,6 +1,6 @@
 .main{
     width: 100%;
-    height: 100vh;
+    height: fit-content;
     display: flex;
     padding: 20px;
     background-color: #f3f2ef;
