--- a/src/App.css
+++ b/src/App.css
@@ -159,10 +159,22 @@ body {
     --blue: #0a66c2;
 }
 
-.app__body{
-
-}
 
 .container{
-    width: 1200px;
+    width: 1400px;
+}
+
+@media (max-width: 1200px){
+    .container{
+        width: 960px;
+    }
+    .sidebar__top-stats-views{
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 992px){
+    .container{
+        width: 720px;
+    }
 }
