--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,7 +1,9 @@
 .main{
     width: 100%;
-    height: 100vh;
+    min-height: 90vh;
+    height: fit-content;
     display: flex;
+    justify-content: center;
     padding: 20px;
     background-color: #f3f2ef;
 }
