--- a/src/components/SidebarUser.css
+++ b/src/components/SidebarUser.css
@@ -27,7 +27,7 @@
 }
 
 .sidebar__top-avatar-photo{
-    transform: translateY(-20%);
+    transform: translateY(-30%);
     width: 50px;
     height: 50px;
     border-radius: 50px;
@@ -88,6 +88,7 @@
     width: 100%;
     margin-top: 10px;
     display: flex;
+    align-items: center;
     font-size: 13px;
     color: var(--darker-grey);
     cursor: pointer;
