--- a/src/App.css
+++ b/src/App.css
@@ -178,3 +178,16 @@ body {
         width: 720px;
     }
 }
+
+@media (max-width: 768px){
+    .container{
+        width: 520px;
+    }
+    }
+
+@media (max-width: 540px){
+    .container{
+        width: 100%;
+        padding: 0 10px;
+    }
+}    
